@@ -1,8 +1,14 @@
 4.10
+New Fetures:
+* tclock: dclock was renamed to tclock = text clock
+* dclock: digital blue clock. adopted from blueclock by 
+    Jochen Baier <email@Jochen-Baier.de>
 * menu: items are sorted by name
 * menu: icon size set to 22
-* menu: forgoten g_free's were added
 * launchbar: drag-n-drop now accepts urls draged from web browsers
+Fixed Bugs:
+* menu: forgoten g_free's were added
+* 1723786: linkage problems with --as-needed flag
 
 4.9
 * new menu placement to not cover panel; used in menu and taskbar
